@@ -27,7 +27,7 @@ Version 1.6 is the latest stable release.
 @section Downloading
 
 The primary download site for sourcecode is
-@uref{ftp://ftp.cs.uu.nl/pub/GNU/LilyPond/}.
+@uref{ftp://ftp.lilypond.org/pub/LilyPond/}.
 
 If you have a slow connection, then you are advised to use
 @uref{ftp://ftp.xcf.berkeley.edu/pub/xdelta/,xdelta} for patching
